--- a/mailexpress-ui/src/main/webapp/form/folder.xhtml
+++ b/mailexpress-ui/src/main/webapp/form/folder.xhtml
@@ -12,7 +12,7 @@
             <h:outputLabel value="#{msg['folder_name']}" for="folderName"/>
             <h:inputText id="folderName" value="#{folderController.folderFormData.name}"/>
         </h:panelGrid>
-        <a4j:commandButton action="#{folderController.saveFolder()}" value="#{msg['save']}" render="tree"
+        <a4j:commandButton action="#{folderController.saveFolder()}" value="#{msg['save']}" render="tree treeCtxMenu"
                            oncomplete="#{rich:component('folderPane')}.hide()" styleClass="m1"/>
         <a4j:commandButton value="#{msg['cancel']}" onclick="#{rich:component('folderPane')}.hide()" styleClass="m1"/>
     </h:form>
