--- a/mailexpress-ui/src/main/webapp/toolbar.xhtml
+++ b/mailexpress-ui/src/main/webapp/toolbar.xhtml
@@ -120,16 +120,18 @@
         <a4j:param id="folderActionName" assignTo="#{folderController.actionName}"/>
     </a4j:jsFunction>
 
-    <a4j:jsFunction name="moveMessageToOtherFolder" action="#{messageController.moveToOtherFolder}" render="msgTable"
+    <a4j:jsFunction name="moveMessageToOtherFolder" action="#{messageController.moveToOtherFolder}"
+                    render="msgTable tableCtxMenu"
                     execute="@this"
                     oncomplete="#{rich:component('confirmMoveMessagePane')}.hide();">
         <a4j:param id="folderName" assignTo="#{messageController.targetFolderName}"/>
     </a4j:jsFunction>
 
-    <a4j:jsFunction name="sendReceiveMessages" action="#{messageController.sendReceive}" render="msgTable"
+    <a4j:jsFunction name="sendReceiveMessages" action="#{messageController.sendReceive}" render="msgTable tableCtxMenu"
                     execute="@this"/>
 
-    <a4j:jsFunction name="removeMessage" action="#{messageController.remove}" render="msgTable" execute="@this"
+    <a4j:jsFunction name="removeMessage" action="#{messageController.remove}" render="msgTable tableCtxMenu"
+                    execute="@this"
                     oncomplete="#{rich:component('confirmMessagePane')}.hide();"/>
 
     <a4j:jsFunction name="removeFolder" action="#{folderController.remove}" render="tree treeCtxMenu" execute="@this"
