--- a/mailexpress-ui/src/main/webapp/form/message.xhtml
+++ b/mailexpress-ui/src/main/webapp/form/message.xhtml
@@ -4,15 +4,18 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:a4j="http://richfaces.org/a4j" xmlns:rich="http://richfaces.org/rich"
-      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:attachment="http://noveogroup.com/">
 <ui:composition>
     <h:form id="messageForm">
         <h:panelGrid columns="2">
             <h:outputLabel value="#{msg['subject']}" for="messageSubject"/>
-            <h:inputText id="messageSubject" label="#{msg['subject']}" value="#{messageController.messageFormData.subject}"/>
+            <h:inputText id="messageSubject" label="#{msg['subject']}"
+                         value="#{messageController.messageFormData.subject}"/>
 
             <h:outputLabel value="#{msg['to']}" for="messageReceivers"/>
-            <h:inputText id="messageReceivers" label="#{msg['to']}" value="#{messageController.messageFormData.receivers}"
+            <h:inputText id="messageReceivers" label="#{msg['to']}"
+                         value="#{messageController.messageFormData.receivers}"
                          required="true">
                 <f:converter converterId="stringListConverter"/>
                 <f:validator validatorId="emailListValidator"/>
@@ -21,7 +24,8 @@
             <h:outputText value="#{msg['email_tip']}" styleClass="tip-text"/>
 
             <h:outputLabel value="#{msg['copy']}" for="messageReceiverCopies"/>
-            <h:inputText id="messageReceiverCopies" label="#{msg['copy']}" value="#{messageController.messageFormData.copies}">
+            <h:inputText id="messageReceiverCopies" label="#{msg['copy']}"
+                         value="#{messageController.messageFormData.copies}">
                 <f:converter converterId="stringListConverter"/>
                 <f:validator validatorId="emailListValidator"/>
             </h:inputText>
@@ -31,6 +35,24 @@
         <rich:messages ajaxRendered="true"/>
 
         <rich:editor id="messageBody" value="#{messageController.messageFormData.body}"/>
+        <h:outputText value="#{msg['attachments']}"/>
+        <rich:dataTable id="existingAttachments" value="#{messageController.messageFormData.attachments}" var="item"
+                        width="60px">
+            <rich:column>
+                <h:commandLink action="#{messageController.downloadFile}">
+                    <f:param name="file" value="#{item.path}"/>
+                    <attachment:attachment value="#{item.path}"/>
+                </h:commandLink>
+            </rich:column>
+            <rich:column>
+                <a4j:commandButton image="#{resource['img:delete.png']}" action="#{messageController.deleteAttachment}"
+                                   title="#{msg['delete']}" immediate="true" execute="@this"
+                                   render="existingAttachments">
+                    <f:param name="file" value="#{item.path}"/>
+                </a4j:commandButton>
+            </rich:column>
+        </rich:dataTable>
+
         <rich:fileUpload fileUploadListener="#{messageController.uploadListener}" id="upload" listHeight="100px"
                          maxFilesQuantity="5" immediateUpload="true" style="width: 100%;height: 120px;"
                          addLabel="#{msg['add_attach']}" clearLabel="#{msg['clear']}"
@@ -39,7 +61,8 @@
                          serverErrorLabel="#{msg['file_upload_fail']}"/>
 
         <a4j:commandButton action="#{messageController.send()}" value="#{msg['send']}"
-                           render="msgList tableCtxMenu" oncomplete="#{rich:component('messagePane')}.hide()" styleClass="m1"/>
+                           render="msgList tableCtxMenu" oncomplete="#{rich:component('messagePane')}.hide()"
+                           styleClass="m1"/>
         <a4j:commandButton value="#{msg['cancel']}"
                            onclick="#{rich:component('messagePane')}.hide()" styleClass="m1"/>
     </h:form>
