--- a/mailexpress-ui/src/main/webapp/list.xhtml
+++ b/mailexpress-ui/src/main/webapp/list.xhtml
@@ -16,7 +16,7 @@
                                         onrowclick="selectMessage(#{message.id});"
                                         noDataLabel="#{msg['no_messages']}" styleClass="message-list">
                     <a4j:ajax execute="@form" event="selectionchange" listener="#{messageListData.selectionListener}"
-                              render="msgView msgTools"/>
+                              render="msgView msgTools replyMenuItem replyToAllMenuItem forwardMenuItem"/>
                     <rich:column id="attachFlag" width="40px">
                         <f:facet name="header">
                             <h:graphicImage library="img" name="attachment_small.png" title="#{msg['has_attachment']}"/>
@@ -38,7 +38,7 @@
                         </a4j:commandButton>
                     </rich:column>
                     <rich:column id="subject" sortBy="#{message.subject}"
-                                 sortOrder="#{messageListData.sortsOrders['subject']}" width="100%">
+                                 sortOrder="#{messageListData.sortsOrders['subject']}" width="300px">
                         <f:facet name="header">
                             <h:outputText value="#{msg['subject']}"/>
                         </f:facet>
@@ -61,33 +61,32 @@
                 </rich:extendedDataTable>
                 <rich:dataScroller for="msgTable" maxPages="5" page="#{messageListData.pageNum}"/>
                 <rich:contextMenu id="tableCtxMenu" target="msgTable" mode="ajax">
-                    <rich:menuItem label="#{msg['reply']}" mode="ajax" icon="#{resource['img:reply.png']}"
-                                   oncomplete="openMessageForm('reply')">
+                    <rich:menuItem id="replyMenuItem" label="#{msg['reply']}" mode="ajax"
+                                   icon="#{resource['img:reply.png']}" onclick="openMessageForm('reply')"
+                                   disabled="#{messageListData.selectedIndexes.size() > 1}">
                         <a4j:param name="currentMessageItemId" value="#{messageListData.selectedItem.id}"
                                    assignTo="#{messageController.currentMessageItemId}"/>
                     </rich:menuItem>
-                    <rich:menuItem label="#{msg['reply_to_all']}" mode="ajax"
+                    <rich:menuItem id="replyToAllMenuItem" label="#{msg['reply_to_all']}" mode="ajax"
                                    icon="#{resource['img:reply_to_all.png']}"
-                                   oncomplete="openMessageForm('reply_to_all')">
+                                   onclick="openMessageForm('reply_to_all')"
+                                   disabled="#{messageListData.selectedIndexes.size() > 1}">
                         <a4j:param name="currentMessageItemId" value="#{messageListData.selectedItem.id}"
                                    assignTo="#{messageController.currentMessageItemId}"/>
                     </rich:menuItem>
-                    <rich:menuItem label="#{msg['forward']}" mode="ajax" icon="#{resource['img:send.png']}"
-                                   oncomplete="openMessageForm('forward')">
+                    <rich:menuItem id="forwardMenuItem" label="#{msg['forward']}" mode="ajax"
+                                   icon="#{resource['img:send.png']}" onclick="openMessageForm('forward')"
+                                   disabled="#{messageListData.selectedIndexes.size() > 1}">
                         <a4j:param name="currentMessageItemId" value="#{messageListData.selectedItem.id}"
                                    assignTo="#{messageController.currentMessageItemId}"/>
                     </rich:menuItem>
                     <rich:menuItem label="#{msg['delete']}" mode="ajax" icon="#{resource['img:delete.png']}"
                                    execute="@this" render="@none"
-                                   oncomplete="#{rich:component('confirmMessagePane')}.show()">
-                        <a4j:param name="currentMessageItemId" value="#{messageListData.selectedItem.id}"
-                                   assignTo="#{messageController.currentMessageItemId}"/>
+                                   onclick="#{rich:component('confirmMessagePane')}.show()">
                     </rich:menuItem>
                     <rich:menuItem label="#{msg['move']}" mode="ajax" icon="#{resource['img:move.png']}"
                                    execute="@this" render="moveMsgForm"
-                                   oncomplete="#{rich:component('confirmMoveMessagePane')}.show()">
-                        <a4j:param name="currentMessageItemId" value="#{messageListData.selectedItem.id}"
-                                   assignTo="#{messageController.currentMessageItemId}"/>
+                                   onclick="#{rich:component('confirmMoveMessagePane')}.show()">
                     </rich:menuItem>
                 </rich:contextMenu>
             </a4j:outputPanel>
