--- a/mailexpress-ui/src/main/webapp/menu.xhtml
+++ b/mailexpress-ui/src/main/webapp/menu.xhtml
@@ -27,7 +27,7 @@
 
             <rich:contextMenu id="treeCtxMenu" target="tree" mode="ajax">
                 <rich:menuItem label="#{msg['new_folder']}"
-                               onclick="openFolderForm('create')"
+                               onclick="openFolderForm('new_folder')"
                                mode="ajax" icon="#{resource['img:new_folder.png']}"/>
                 <rich:menuItem id="renameFolderMenuItem" label="#{msg['rename']}" onclick="openFolderForm('rename')"
                                mode="ajax" icon="#{resource['img:rename.png']}"
