--- a/mailexpress-ui/src/main/webapp/toolbar.xhtml
+++ b/mailexpress-ui/src/main/webapp/toolbar.xhtml
@@ -135,11 +135,11 @@
     <a4j:jsFunction name="sendReceiveMessages" action="#{messageController.sendReceive}" render="msgTable tableCtxMenu"
                     execute="@this"/>
 
-    <a4j:jsFunction name="removeMessage" action="#{messageController.remove}" render="msgTable tableCtxMenu"
+    <a4j:jsFunction name="removeMessage" action="#{messageController.removeMessages}" render="msgTable tableCtxMenu"
                     execute="@this"
                     oncomplete="#{rich:component('confirmMessagePane')}.hide();"/>
 
-    <a4j:jsFunction name="removeFolder" action="#{folderController.remove}" render="tree treeCtxMenu" execute="@this"
+    <a4j:jsFunction name="removeFolder" action="#{folderController.removeFolder}" render="tree treeCtxMenu" execute="@this"
                     oncomplete="#{rich:component('confirmFolderPane')}.hide();"/>
 
 </ui:composition>
