--- a/mailexpress-ui/src/main/webapp/toolbar.xhtml
+++ b/mailexpress-ui/src/main/webapp/toolbar.xhtml
@@ -14,22 +14,23 @@
                         <a4j:commandButton image="#{resource['img:send_receive.png']}" title="#{msg['send_receive']}"
                                            onclick="sendReceiveMessages()"/>
                         <a4j:commandButton image="#{resource['img:mail.png']}" title="#{msg['new_message']}"
-                                           onclick="openMessageForm('create')"/>
+                                           onclick="#{rich:component('messagePane')}.show()"
+                                           oncomplete="loadMessageForm('new_message')"/>
                         <a4j:commandButton
                                 image="#{empty messageController.currentMessageItemId || messageListData.selectedIndexes.size() > 1 ? resource['img:reply_disabled.png'] : resource['img:reply.png']}"
                                 title="#{msg['reply']}"
                                 disabled="#{empty messageController.currentMessageItemId || messageListData.selectedIndexes.size() > 1}"
-                                onclick="openMessageForm('reply')"/>
+                                onclick="#{rich:component('messagePane')}.show()" oncomplete="loadMessageForm('reply')"/>
                         <a4j:commandButton
                                 image="#{empty messageController.currentMessageItemId || messageListData.selectedIndexes.size() > 1 ? resource['img:reply_to_all_disabled.png'] : resource['img:reply_to_all.png']}"
                                 title="#{msg['reply_to_all']}"
                                 disabled="#{empty messageController.currentMessageItemId || messageListData.selectedIndexes.size() > 1}"
-                                onclick="openMessageForm('reply_to_all')"/>
+                                onclick="#{rich:component('messagePane')}.show()" oncomplete="loadMessageForm('reply_to_all')"/>
                         <a4j:commandButton
                                 image="#{empty messageController.currentMessageItemId || messageListData.selectedIndexes.size() > 1 ? resource['img:send_disabled.png'] : resource['img:send.png']}"
                                 title="#{msg['forward']}"
                                 disabled="#{empty messageController.currentMessageItemId || messageListData.selectedIndexes.size() > 1}"
-                                onclick="openMessageForm('forward')"/>
+                                onclick="#{rich:component('messagePane')}.show()" oncomplete="loadMessageForm('forward')"/>
                         <a4j:commandButton
                                 image="#{not empty messageController.currentMessageItemId ? resource['img:delete.png'] : resource['img:delete_disabled.png']}"
                                 title="#{msg['delete']}" disabled="#{empty messageController.currentMessageItemId}"
@@ -114,9 +115,8 @@
                            onclick="#{rich:component('confirmFolderPane')}.hide(); return false;"/>
     </rich:popupPanel>
 
-    <a4j:jsFunction name="openMessageForm" action="#{messageController.openForm}"
-                    oncomplete="#{rich:component('messagePane')}.show();" render="messagePane messageForm messageBody"
-                    execute="@this">
+    <a4j:jsFunction name="loadMessageForm" action="#{messageController.openForm}"
+                    render="messageForm">
         <a4j:param id="messageActionName" assignTo="#{messageController.actionName}"/>
     </a4j:jsFunction>
 
