--- a/mailexpress-ui/src/main/webapp/index.xhtml
+++ b/mailexpress-ui/src/main/webapp/index.xhtml
@@ -28,7 +28,7 @@
         , outerLayoutOptions = {
         center__paneSelector: ".outer-center"
         , north__paneSelector: ".outer-north"
-        , spacing_open: 8 // ALL panes
+        , spacing_open: 5 // ALL panes
         , spacing_closed: 10 // ALL panes
         , north__closable: false
         , north__resizable: false
@@ -38,7 +38,7 @@
 
         , emailListingLayout = null
         , emailListingLayoutOptions = {
-        spacing_open: 8 // ALL panes
+        spacing_open: 5 // ALL panes
         , spacing_closed: 10 // ALL panes
         , west__size: 180
         , west__minSize: 180
@@ -60,11 +60,15 @@
         , emailListingInnerLayoutOptions = {
         center__paneSelector: ".inner-center"
         , south__paneSelector: ".inner-south"
-        , spacing_open: 8 // ALL panes
+        , spacing_open: 5 // ALL panes
         , spacing_closed: 10
         , south__size: "50%"
         , south__minSize: 80
         , south__maxSize: "80%"
+        , center__minWidth: "100%"
+        , center__maxWidth: "100%"
+        , center__minHeight: 270
+        , center__maxHeight: 270
         }
 
         ;
