--- a/mailexpress-ui/src/main/webapp/list.xhtml
+++ b/mailexpress-ui/src/main/webapp/list.xhtml
@@ -38,7 +38,7 @@
                         </a4j:commandButton>
                     </rich:column>
                     <rich:column id="subject" sortBy="#{message.subject}"
-                                 sortOrder="#{messageListData.sortsOrders['subject']}" width="300px">
+                                 sortOrder="#{messageListData.sortsOrders['subject']}" style="width: 100%;">
                         <f:facet name="header">
                             <h:outputText value="#{msg['subject']}"/>
                         </f:facet>
